MiniJava/src/compiler/Frontend/MiniJavaParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g 2010-10-12 15:02:04

  package compiler.Frontend;
  
  import java.util.LinkedList;
  import compiler.IR.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class MiniJavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "INT", "STRING", "QUOTE", "CHAR", "NEWLINE", "COMMENT", "LOWER", "UPPER", "NONNULL", "NUMBER", "WHITESPACE", "'class'", "'{'", "'public'", "'static'", "'void'", "'main'", "'('", "'String'", "'['", "']'", "')'", "'extends'", "'}'", "';'", "'int'", "'boolean'", "','", "'return'", "'System.out.println'", "'='", "'if'", "'else'", "'while'", "'&&'", "'=='", "'<'", "'+'", "'-'", "'*'", "'new'", "'true'", "'false'", "'.'", "'this'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int CHAR=8;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int QUOTE=7;
    public static final int T__16=16;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int IDENT=4;
    public static final int COMMENT=10;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=14;
    public static final int WHITESPACE=15;
    public static final int INT=5;
    public static final int NONNULL=13;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int NEWLINE=9;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int LOWER=11;
    public static final int UPPER=12;
    public static final int STRING=6;

    // delegates
    // delegators


        public MiniJavaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MiniJavaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return MiniJavaParser.tokenNames; }
    public String getGrammarFileName() { return "/home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g"; }





    // $ANTLR start "program"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:26:1: program returns [MJProgram p] : mc= mainClass (cd= classDeclaration )* ;
    public final MJProgram program() throws RecognitionException {
        MJProgram p = null;

        MJClass mc = null;

        MJClass cd = null;


        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:26:30: (mc= mainClass (cd= classDeclaration )* )
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:27:3: mc= mainClass (cd= classDeclaration )*
            {
             LinkedList<MJClass> cdl = new LinkedList<MJClass>(); 
            pushFollow(FOLLOW_mainClass_in_program59);
            mc=mainClass();

            state._fsp--;

             cdl.add(mc); p = new MJProgram(cdl); 
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:29:3: (cd= classDeclaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==16) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:29:4: cd= classDeclaration
            	    {
            	    pushFollow(FOLLOW_classDeclaration_in_program70);
            	    cd=classDeclaration();

            	    state._fsp--;

            	    cdl.add(cd);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return p;
    }
    // $ANTLR end "program"


    // $ANTLR start "mainClass"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:36:1: mainClass returns [MJClass c] : 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' parname= IDENT ')' b= block ;
    public final MJClass mainClass() throws RecognitionException {
        MJClass c = null;

        Token cname=null;
        Token parname=null;
        MJBlock b = null;


        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:37:3: ( 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' parname= IDENT ')' b= block )
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:37:5: 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' parname= IDENT ')' b= block
            {
            match(input,16,FOLLOW_16_in_mainClass100); 
            cname=(Token)match(input,IDENT,FOLLOW_IDENT_in_mainClass106); 
            match(input,17,FOLLOW_17_in_mainClass108); 
            match(input,18,FOLLOW_18_in_mainClass115); 
            match(input,19,FOLLOW_19_in_mainClass117); 
            match(input,20,FOLLOW_20_in_mainClass119); 
            match(input,21,FOLLOW_21_in_mainClass121); 
            match(input,22,FOLLOW_22_in_mainClass123); 
            match(input,23,FOLLOW_23_in_mainClass125); 
            match(input,24,FOLLOW_24_in_mainClass127); 
            match(input,25,FOLLOW_25_in_mainClass129); 
            parname=(Token)match(input,IDENT,FOLLOW_IDENT_in_mainClass135); 
            match(input,26,FOLLOW_26_in_mainClass137); 
            pushFollow(FOLLOW_block_in_mainClass143);
            b=block();

            state._fsp--;


                MJType partype = new MJType(new MJType("String"));
                MJVariable par = new MJVariable( partype, (parname!=null?parname.getText():null));
                 
                MJMethod md = new MJMethod(MJType.Tvoid, "main", par, b, true, true);
                c = new MJClass((cname!=null?cname.getText():null), md);
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "mainClass"


    // $ANTLR start "classDeclaration"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:48:1: classDeclaration returns [MJClass c] : 'class' cname= IDENT ( 'extends' sc= IDENT )? '{' (v= varDeclaration )* (m= methodDeclaration )* '}' ;
    public final MJClass classDeclaration() throws RecognitionException {
        MJClass c = null;

        Token cname=null;
        Token sc=null;
        MJVariable v = null;

        MJMethod m = null;


        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:49:3: ( 'class' cname= IDENT ( 'extends' sc= IDENT )? '{' (v= varDeclaration )* (m= methodDeclaration )* '}' )
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:50:3: 'class' cname= IDENT ( 'extends' sc= IDENT )? '{' (v= varDeclaration )* (m= methodDeclaration )* '}'
            {
             
                LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
                LinkedList<MJMethod> mdl = new LinkedList<MJMethod>();
              
            match(input,16,FOLLOW_16_in_classDeclaration174); 
            cname=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDeclaration180); 
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:54:25: ( 'extends' sc= IDENT )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==27) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:54:26: 'extends' sc= IDENT
                    {
                    match(input,27,FOLLOW_27_in_classDeclaration183); 
                    sc=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDeclaration189); 

                    }
                    break;

            }

            match(input,17,FOLLOW_17_in_classDeclaration193); 
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:54:53: (v= varDeclaration )*
            loop3:
            do {
                int alt3=2;
                switch ( input.LA(1) ) {
                case 30:
                    {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==24) ) {
                        int LA3_5 = input.LA(3);

                        if ( (LA3_5==25) ) {
                            int LA3_7 = input.LA(4);

                            if ( (LA3_7==IDENT) ) {
                                int LA3_6 = input.LA(5);

                                if ( (LA3_6==29) ) {
                                    alt3=1;
                                }


                            }


                        }


                    }
                    else if ( (LA3_2==IDENT) ) {
                        int LA3_6 = input.LA(3);

                        if ( (LA3_6==29) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 31:
                    {
                    int LA3_3 = input.LA(2);

                    if ( (LA3_3==IDENT) ) {
                        int LA3_6 = input.LA(3);

                        if ( (LA3_6==29) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case IDENT:
                    {
                    int LA3_4 = input.LA(2);

                    if ( (LA3_4==IDENT) ) {
                        int LA3_6 = input.LA(3);

                        if ( (LA3_6==29) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:54:54: v= varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_classDeclaration200);
            	    v=varDeclaration();

            	    state._fsp--;

            	    vdl.add(v);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:54:92: (m= methodDeclaration )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==IDENT||(LA4_0>=18 && LA4_0<=20)||(LA4_0>=30 && LA4_0<=31)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:54:93: m= methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_classDeclaration214);
            	    m=methodDeclaration();

            	    state._fsp--;

            	    mdl.add(m);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            match(input,28,FOLLOW_28_in_classDeclaration220); 

                c = new MJClass((cname!=null?cname.getText():null),(sc!=null?sc.getText():null),vdl,mdl);
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "classDeclaration"


    // $ANTLR start "block"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:59:1: block returns [MJBlock b] : '{' (vd= varDeclaration )* (sd= statement )* '}' ;
    public final MJBlock block() throws RecognitionException {
        MJBlock b = null;

        MJVariable vd = null;

        MJStatement sd = null;


        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:60:5: ( '{' (vd= varDeclaration )* (sd= statement )* '}' )
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:61:5: '{' (vd= varDeclaration )* (sd= statement )* '}'
            {
              LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
                   LinkedList<MJStatement> sdl = new LinkedList<MJStatement>();
                   
                
            match(input,17,FOLLOW_17_in_block255); 
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:65:9: (vd= varDeclaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==IDENT) ) {
                    int LA5_2 = input.LA(2);

                    if ( (LA5_2==IDENT) ) {
                        alt5=1;
                    }


                }
                else if ( ((LA5_0>=30 && LA5_0<=31)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:65:11: vd= varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_block263);
            	    vd=varDeclaration();

            	    state._fsp--;

            	     vdl.add(vd); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:67:8: (sd= statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==IDENT||LA6_0==17||LA6_0==34||LA6_0==36||LA6_0==38) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:67:10: sd= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block285);
            	    sd=statement();

            	    state._fsp--;

            	     sdl.add(sd); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            match(input,28,FOLLOW_28_in_block305); 

                   b = new MJBlock(vdl, sdl);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return b;
    }
    // $ANTLR end "block"


    // $ANTLR start "varDeclaration"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:80:1: varDeclaration returns [MJVariable vd] : t= type n= IDENT ';' ;
    public final MJVariable varDeclaration() throws RecognitionException {
        MJVariable vd = null;

        Token n=null;
        MJType t = null;


        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:81:3: (t= type n= IDENT ';' )
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:81:5: t= type n= IDENT ';'
            {
            pushFollow(FOLLOW_type_in_varDeclaration347);
            t=type();

            state._fsp--;

            n=(Token)match(input,IDENT,FOLLOW_IDENT_in_varDeclaration353); 
            match(input,29,FOLLOW_29_in_varDeclaration355); 

                vd = new MJVariable(t,n.getText());
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return vd;
    }
    // $ANTLR end "varDeclaration"


    // $ANTLR start "type"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:87:1: type returns [MJType t] : ( 'int' | 'boolean' | 'int' '[' ']' | IDENT );
    public final MJType type() throws RecognitionException {
        MJType t = null;

        Token IDENT1=null;

        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:88:3: ( 'int' | 'boolean' | 'int' '[' ']' | IDENT )
            int alt7=4;
            switch ( input.LA(1) ) {
            case 30:
                {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==24) ) {
                    alt7=3;
                }
                else if ( (LA7_1==IDENT) ) {
                    alt7=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case 31:
                {
                alt7=2;
                }
                break;
            case IDENT:
                {
                alt7=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:88:5: 'int'
                    {
                    match(input,30,FOLLOW_30_in_type377); 
                     t = MJType.Tint; 

                    }
                    break;
                case 2 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:90:5: 'boolean'
                    {
                    match(input,31,FOLLOW_31_in_type388); 
                     t = MJType.Tboolean; 

                    }
                    break;
                case 3 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:92:5: 'int' '[' ']'
                    {
                    match(input,30,FOLLOW_30_in_type398); 
                    match(input,24,FOLLOW_24_in_type400); 
                    match(input,25,FOLLOW_25_in_type402); 
                    t = MJType.TintArray;

                    }
                    break;
                case 4 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:94:5: IDENT
                    {
                    IDENT1=(Token)match(input,IDENT,FOLLOW_IDENT_in_type413); 

                        t = new MJType((IDENT1!=null?IDENT1.getText():null));
                      

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return t;
    }
    // $ANTLR end "type"


    // $ANTLR start "methodDeclaration"
    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:100:1: methodDeclaration returns [MJMethod m] : ( 'public' )? ( 'static' )? procType IDENT '(' ( type IDENT ( ',' type IDENT )* )? ')' '{' ( varDeclaration )* ( statement )* 'return' optExpression ';' '}' ;
    public final MJMethod methodDeclaration() throws RecognitionException {
        MJMethod m = null;

        try {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:3: ( ( 'public' )? ( 'static' )? procType IDENT '(' ( type IDENT ( ',' type IDENT )* )? ')' '{' ( varDeclaration )* ( statement )* 'return' optExpression ';' '}' )
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:5: ( 'public' )? ( 'static' )? procType IDENT '(' ( type IDENT ( ',' type IDENT )* )? ')' '{' ( varDeclaration )* ( statement )* 'return' optExpression ';' '}'
            {
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:5: ( 'public' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==18) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:6: 'public'
                    {
                    match(input,18,FOLLOW_18_in_methodDeclaration439); 

                    }
                    break;

            }

            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:17: ( 'static' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==19) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:18: 'static'
                    {
                    match(input,19,FOLLOW_19_in_methodDeclaration444); 

                    }
                    break;

            }

            pushFollow(FOLLOW_procType_in_methodDeclaration448);
            procType();

            state._fsp--;

            match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration450); 
            match(input,22,FOLLOW_22_in_methodDeclaration452); 
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:48: ( type IDENT ( ',' type IDENT )* )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==IDENT||(LA11_0>=30 && LA11_0<=31)) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:49: type IDENT ( ',' type IDENT )*
                    {
                    pushFollow(FOLLOW_type_in_methodDeclaration455);
                    type();

                    state._fsp--;

                    match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration457); 
                    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:59: ( ',' type IDENT )*
                    loop10:
                    do {
                        int alt10=2;
                        int LA10_0 = input.LA(1);

                        if ( (LA10_0==32) ) {
                            alt10=1;
                        }


                        switch (alt10) {
                    	case 1 :
                    	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:101:60: ',' type IDENT
                    	    {
                    	    match(input,32,FOLLOW_32_in_methodDeclaration459); 
                    	    pushFollow(FOLLOW_type_in_methodDeclaration461);
                    	    type();

                    	    state._fsp--;

                    	    match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration463); 

                    	    }
                    	    break;

                    	default :
                    	    break loop10;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,26,FOLLOW_26_in_methodDeclaration469); 
            match(input,17,FOLLOW_17_in_methodDeclaration471); 
            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:102:19: ( varDeclaration )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==IDENT) ) {
                    int LA12_2 = input.LA(2);

                    if ( (LA12_2==IDENT) ) {
                        alt12=1;
                    }


                }
                else if ( ((LA12_0>=30 && LA12_0<=31)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:102:20: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_methodDeclaration492);
            	    varDeclaration();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);

            // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:102:37: ( statement )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==IDENT||LA13_0==17||LA13_0==34||LA13_0==36||LA13_0==38) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /home/krc/workspace/MiniJava/src/compiler/Frontend/MiniJava.g:102:38: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_methodDeclaration497);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);

            match(input,33,FOLLOW_33_in_methodDeclaration502); 
            pushFollow(FOLLOW_optExpression_in_methodDeclaration504);
            optExpression();

            state._fsp--;
